--- a/package.json
+++ b/package.json
@@ -6,14 +6,32 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/color": "^3.0.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-modal": "^3.10.6",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
+    "@types/uuid": "^8.3.0",
+    "color": "^3.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "react-tooltip-lite": "^1.12.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "rpg-dice-roller": "^4.4.1",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7",
+    "typescript": "^4.0.2",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
