--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ftkts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mpm1900.github.io/JSFTK_combat",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,6 +20,7 @@
     "@types/styletron-react": "^5.0.2",
     "@types/uuid": "^8.3.0",
     "color": "^3.1.2",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
@@ -37,7 +39,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
