--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/color": "^3.0.1",
     "@types/jest": "^24.0.0",
+    "@types/kefir": "^3.8.5",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -21,6 +22,7 @@
     "@types/uuid": "^8.3.0",
     "color": "^3.1.2",
     "gh-pages": "^3.1.0",
+    "kefir": "^3.8.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
