--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "react-tooltip-lite": "^1.12.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
