--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-toastify": "^4.1.0",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/styletron-engine-atomic": "^1.1.0",
@@ -33,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
+    "react-toastify": "^6.0.8",
     "react-tooltip-lite": "^1.12.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
