--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-svg": "^5.0.0",
     "@types/react-toastify": "^4.1.0",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
@@ -28,12 +29,14 @@
     "kefir": "^3.8.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hexgrid": "^1.0.3",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
+    "react-svg": "^11.0.40",
     "react-toastify": "^6.0.8",
     "react-tooltip-lite": "^1.12.0",
     "react-tree-graph": "^5.1.0",
